More more  proofreading

--- a/site/guide/configuration/_add-remove-group-members.qmd
+++ b/site/guide/configuration/_add-remove-group-members.qmd
@@ -25,7 +25,7 @@ a. Select members to be removed from the group by checking the boxes next to the
 
 a. Click **{{< fa user-minus >}} Remove Member**.
 
-   After you confirm, the user will be removed from that group.
+a. After you confirm, the user will be removed from that group.
 
 :::
 
