--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -60,7 +60,7 @@ b. Make your edits then click **Save Changes** to apply your adjustments.
 #### Remove a dashboard
 
 a. To remove a dashboard, select **{{< fa trash-can >}} Delete**.
-b. Once you confirm, your dashboard will be deleted.
+b. After you confirm, your dashboard will be deleted.
 
 :::
 
@@ -143,7 +143,7 @@ Removing a widget from a dashboard will not delete the linked view or analytics 
 
 4. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Remove**]{.red}.
 
-5. Once you confirm, your widget will be removed from your dashboard.
+5. After you confirm, your widget will be removed from your dashboard.
 
 
 <!-- FOOTNOTES -->
