--- a/site/guide/configuration/manage-groups.qmd
+++ b/site/guide/configuration/manage-groups.qmd
@@ -49,7 +49,7 @@ You can only remove non-default groups.
 
 4. Click **{{< fa trash-can >}} Delete Group** to remove it.
 
-   After you confirm, the group will be permanently removed.
+5. After you confirm, the group will be permanently removed.
 
 ## Add or remove group members
 
