--- a/site/guide/configuration/manage-users.qmd
+++ b/site/guide/configuration/manage-users.qmd
@@ -48,7 +48,7 @@ Invite new users and review your current users from within the user directory. U
 
 3. Click the {{< fa xmark >}} next to the role for the user that you want to remove.
 
-    After you confirm, that role will be removed from the user.
+4.  After you confirm, that role will be removed from the user.
 
 
 
