--- a/site/guide/model-documentation/collaborate-with-others.qmd
+++ b/site/guide/model-documentation/collaborate-with-others.qmd
@@ -109,7 +109,7 @@ To edit a comment in a resolved thread, follow the same steps but click the **{{
 
 2. Click the **{{< fa ellipsis-vertical >}}** icon for the corresponding comment and select **{{< fa trash-can >}} Remove**.
     
-    After you confirm, the comment will be deleted.
+3. After you confirm, the comment will be deleted.
 
 To delete a comment in a resolved thread, follow the same steps but click the **{{< fa envelope-circle-check >}} Comments archive** button first to access the resolved thread.
 
