--- a/site/guide/model-inventory/_remove-layout-view.qmd
+++ b/site/guide/model-inventory/_remove-layout-view.qmd
@@ -5,6 +5,6 @@
 1. When the **{{< fa ellipsis-vertical >}}** appears, click on it to edit the name or description or to delete the view:
 
     - To edit a view, select **{{< fa pencil >}} Edit View**. Make your edits then click **Save Changes** to apply your adjustments.
-    - To remove a view, select [**{{< fa trash-can >}} Remove View**]{.red}. Once you confirm, your view will be deleted.
+    - To remove a view, select [**{{< fa trash-can >}} Remove View**]{.red}.
 
-1. Once you confirm, the view will be deleted.
+1. After you confirm, the view will be deleted.
