--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -53,7 +53,7 @@ a. Select **Archived** from the [model stage]{.smallcaps} drop-down menu.
 
 b. Click **Save** to proceed with archival.
 
-    Once you confirm, the model is flagged as archived in the model inventory.
+c. After you confirm, the model is flagged as archived in the model inventory.
 
 Archived models can be reactivated to make them available for use again in the inventory.
 
@@ -63,7 +63,7 @@ a. Select **Active** from the [model stage]{.smallcaps} drop-down menu.
 
 b. Click **Save** to proceed with activation.
 
-    Once you confirm, the model is set to active in the model inventory.
+d. After you confirm, the model is set to active in the model inventory.
 
 :::
 
@@ -81,7 +81,7 @@ If a model was created in error, or you otherwise no longer require a model to b
 
 3. Under the [model stage]{.smallcaps} section, select **Deleted**.
 
-    Once you confirm deletion, the model is removed from the model inventory.
+4. After you confirm deletion, the model is removed from the model inventory.
 
 
 <!-- FOOTNOTES -->
