--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -35,7 +35,7 @@ aliases:
 
 4. Click **Delete**.
 
-    After you confirm, the field will be removed.
+5. After you confirm, the field will be removed.
 
 ## What's next
 
