--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -125,7 +125,7 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 2. On the finding's detail page, click **{{< fa trash-can>}} Delete Finding** in the right sidebar.
 
-   Once you confirm, the finding will be permanently deleted. 
+3. After you confirm, the finding will be permanently deleted. 
 
    ![Deleting a finding](delete-model-finding.gif){fig-alt="An animated gif demonstrating how to delete a finding" .screenshot}
 
