--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -67,7 +67,7 @@ a. Hover over the risk area you want to remove.
 
 b. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select [**{{< fa trash-can>}} Delete Risk Area**]{.red}.
 
-c. Once you confirm, that risk area will be removed.
+c. After you confirm, that risk area will be removed.
 
 :::
 
@@ -109,7 +109,7 @@ b. Hover over the guideline you want to delete.
 
 c. When the  **{{< fa ellipsis-vertical >}}** menu appears, click on it and select [**{{< fa trash-can>}} Delete Guideline**]{.red}.
 
-d. Once you confirm, that guideline will be removed.
+d. After you confirm, that guideline will be removed.
 
 :::
 
