--- a/site/guide/reporting/manage-custom-reports.qmd
+++ b/site/guide/reporting/manage-custom-reports.qmd
@@ -111,7 +111,7 @@ You can either delete a entire custom analytics page, or remove a single custom 
 
 4. Select **{{< fa trash-can >}} Delete**.
 
-5. After you confirm the deletion, the page will be permanently removed.
+5. After you confirm, the page will be permanently removed.
 
 
 #### Delete a visualization
@@ -126,7 +126,7 @@ You can either delete a entire custom analytics page, or remove a single custom 
 
 5. When the **{{< fa ellipsis-vertical >}}** icon appears, click on it and select **{{< fa trash-can >}} Remove**.
 
-6. After you confirm the deletion, the visualization will be permanently removed from that dashboard.
+6. After you confirm, the visualization will be permanently removed from that dashboard.
 
 :::
 
