--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -79,7 +79,7 @@ To remove an existing text block from your block library:
 
 3. To the right of the text block you want to remove, click **{{< fa ellipsis-vertical >}}** and select **[{{< fa trash-can >}} Delete Text Block]{.red}**.
 
-4. Once you confirm, the text block will be removed from your block library.
+4. After you confirm, the text block will be removed from your block library.
 
 
 
