Even more proofreading

--- a/site/guide/attestation/set-up-attestations.qmd
+++ b/site/guide/attestation/set-up-attestations.qmd
@@ -61,41 +61,43 @@ For testing purposes only, you can trigger the attestation process:
 
 After executing the schedule, the dashboard of the model owner displays a banner notification that the attestation is ready to be completed.
 
-## Edit attestation periods
+## Manage existing attestation periods
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace, select **Attestations** and then click the attestation period to edit.
+2. Under Workspace, select **Attestations** and then click the attestation period to edit or remove.
 
-3. Under **Scheduling**, hover over an attestation period.
+::: {.panel-tabset}
 
-4. When **{{< fa ellipsis-vertical >}}** appears, select **{{< fa pencil >}} Edit**.
+#### Edit attestation periods
 
-5. Make your desired changes to the following:
+a. Under **Scheduling**, hover over an attestation period.
+
+b. When **{{< fa ellipsis-vertical >}}** appears, select **{{< fa pencil >}} Edit**.
+
+c. Make your desired changes to the following:
 
    - **[name]{.smallcaps}**
    - **[start date]{.smallcaps}**
    - **[end date]{.smallcaps}**
 
-6. Click **Save Period**.
+d. Click **Save Period**.
 
 Edits to an attestation period will be effective for future occurrences but do not affect previous or in-progress attestation periods.
 
-## Remove attestation periods
+#### Remove attestation periods
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. Under **Scheduling**, hover over an attestation period.
 
-2. Under Workspace, select **Attestations** and then click the attestation to remove.
+b. When **{{< fa ellipsis-vertical >}}** appears, select [**{{< fa trash >}} Remove**]{.red}.
 
-3. Under **Scheduling**, hover over an attestation period.
-
-4. When **{{< fa ellipsis-vertical >}}** appears, select [**{{< fa trash >}} Remove**]{.red}.
-
-5. Click **Delete** to confirm the removal.
+c. Click **Delete** to confirm the removal.
 
 <!-- TO DO Confirm with Steven that this is correct -->
 ::: {.callout-important title="Removing an attestation period is permanent"}
 This action cannot be undone and prevents the attestation period from being triggered in the future. The history of previous attestation periods is unaffected by this action.
+:::
+
 :::
 
 <!-- FOOTNOTES -->
