--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -28,16 +28,18 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 
 ::: {.panel-tabset}
 
+#### Add business units
+
 {{< include _add-business-units.qmd >}}
 
 #### Edit business units
 
-1. Hover over the business unit you want to edit.
+a. Hover over the business unit you want to edit.
 
-2. When the **{{< fa ellipsis-vertical >}}** appears, click on it to rename or delete the unit:
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it to rename or delete the unit:
 
-  - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
-  - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
+    - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
+    - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
 
 ::: {.callout-important}
 In order to delete a business unit, there must be no models attached to that unit.
@@ -57,6 +59,8 @@ In order to delete a business unit, there must be no models attached to that uni
 
 ::: {.panel-tabset}
 
+#### Add use cases
+
 {{< include _add-use-cases.qmd >}}
 
 #### Remove use cases
@@ -65,11 +69,11 @@ In order to delete a business unit, there must be no models attached to that uni
 In order to delete a use case, there must be no models associated with it.
 :::
 
-1. Hover over the use case you want to edit.
+a. Hover over the use case you want to edit.
 
-2. When the **{{< fa ellipsis-vertical >}}** appears, click on it.
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it.
 
-3. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
+c. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
 
 :::
 
