--- a/site/guide/reporting/manage-custom-reports.qmd
+++ b/site/guide/reporting/manage-custom-reports.qmd
@@ -99,34 +99,28 @@ Removing a custom analytics page or visualization cannot be undone.
 
 You can either delete a entire custom analytics page, or remove a single custom visualization: 
 
+1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
+
+2. Click on the tab for your custom page or visualization you'd like to delete.
+
+3. Click **{{< fa pencil >}} Edit Dashboard**.
+
 ::: {.panel-tabset}
 
 #### Delete an analytics page
 
-1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
+a. Select **{{< fa trash-can >}} Delete**.
 
-2. Click on the tab for your custom page you'd like to delete.
-
-3. Click **{{< fa pencil >}} Edit Dashboard**.
-
-4. Select **{{< fa trash-can >}} Delete**.
-
-5. After you confirm, the page will be permanently removed.
+b. After you confirm, the page will be permanently removed.
 
 
 #### Delete a visualization
 
-1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
+a. Hover over the visualization you'd like to remove.
 
-2. Click on the tab for your custom page you'd like to delete a visualization for.
+b. When the **{{< fa ellipsis-vertical >}}** icon appears, click on it and select **{{< fa trash-can >}} Remove**.
 
-3. Click **{{< fa pencil >}} Edit Dashboard**.
-
-4. Hover over the visualization you'd like to remove.
-
-5. When the **{{< fa ellipsis-vertical >}}** icon appears, click on it and select **{{< fa trash-can >}} Remove**.
-
-6. After you confirm, the visualization will be permanently removed from that dashboard.
+c. After you confirm, the visualization will be permanently removed from that dashboard.
 
 :::
 
