--- a/site/guide/attestation/_configure-attestations.qmd
+++ b/site/guide/attestation/_configure-attestations.qmd
@@ -1,4 +1,11 @@
 :::: {.content-visible unless-format="revealjs"}
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+1. Under Workspace, select **Attestations** and then click an attestation to configure.
+
+::: {.panel-tabset}
+
 ### Add attestation periods
 
 Attestation periods are typically scheduled quarterly or annually and should be configured to align with regulatory or internal review cycles: 
@@ -16,19 +23,15 @@ Attestation periods reflect the time zone of the user setting up attestation and
 
 :::
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. Click **{{< fa plus >}} Add Attestation Period**.
 
-1. Under Workspace, select **Attestations** and then click an attestation to configure.
+b. Enter a **[name]{.smallcaps}** for the attestation period, such as `Quarterly attestation`.
 
-1. Click **{{< fa plus >}} Add Attestation Period**.
+c. Set the **[start date]{.smallcaps}** for the attestation period.
 
-1. Enter a **[name]{.smallcaps}** for the attestation period, such as `Quarterly attestation`.
+d. Set the **[end date]{.smallcaps}** when the attestation period ends.
 
-1. Set the **[start date]{.smallcaps}** for the attestation period.
-
-1. Set the **[end date]{.smallcaps}** when the attestation period ends.
-
-1. Click **Add Period**.
+e. Click **Add Period**.
 
  When the attestation period begins, the system triggers the process automatically. Model owners are then notified via a banner on their dashboard prompting them to complete the attestation questionnaire.
 
@@ -36,16 +39,12 @@ Attestation periods reflect the time zone of the user setting up attestation and
 
 By default, attestations include the model name. Add additional model inventory fields as needed:
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-1. Under Workspace, select **Attestations** and then click an attestation to configure.
-
-1. Under Relevant Attestation Fields, drag model inventory fields between columns:
+a. Under Relevant Attestation Fields, drag model inventory fields between columns:
 
    - **Model Inventory Fields** — Available fields from the model inventory
    - **Relevant Attestation Fields** — Selected fields to display in model snapshots
 
-1. Optional: Reorder the fields to change how they display in the attestation.
+b. Optional: Reorder the fields to change how they display in the attestation.
 
 ### Edit questionnaire templates
 
@@ -62,11 +61,7 @@ ___
 [How do I create meaningful attestation questionnaires?](/guide/attestation/working-with-attestations.qmd#how-do-i-create-meaningful-attestation-questionnaires)
 :::
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-1. Under Workspace, select **Attestations** and then click the attestation you want to configure.
-
-1. Under Questionnaire Template, click the template area to edit. You can add rich text fields such as:
+a. Under Questionnaire Template, click the template area to edit. You can add rich text fields such as:
 
    - Instructions 
    - Links to guidelines
@@ -76,9 +71,11 @@ ___
 
    ![A screenshot of the questionnaire template editor](/guide/attestation/edit-questionnaire-template.gif){width=100% fig-alt="An animation of the questionnaire template editor showing the process of adding a question about documentation of compliance to the template with the instructions to confirm that required documentation, such as model documentation, validation reports, and change logs, has been completed." .screenshot}
 
-1. After you complete your edits, click **Save**.
+b. After you complete your edits, click **Save**.
 
 The attestation questionnaire is now ready to be be used in future attestation instances, to be completed by model owners and reviewed and signed off by validators.
+
+:::
 
 ::::
 
