--- a/site/guide/configuration/_add-use-cases.qmd
+++ b/site/guide/configuration/_add-use-cases.qmd
@@ -1,6 +1,17 @@
-#### Add use cases
+:::: {.content-visible unless-format="revealjs"}
+a. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
+
+a. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
+
+a. Click **{{< fa plus >}} Add Use Case** to save your changes.
+
+   After you save, confirm that the use case was added as a new entry in alphabetical order.
+
+::::
 
 :::: {.content-hidden unless-format="revealjs"}
+#### Add use cases
+
 {{< include /guide/configuration/_use-cases.qmd >}}
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -14,15 +25,4 @@
 1. Click **{{< fa plus >}} Add Use Case** to save your changes.
 
    After you save, confirm that the use case was added as a new entry in alphabetical order.
-::::
-
-:::: {.content-visible unless-format="revealjs"}
-1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
-
-1. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
-
-1. Click **{{< fa plus >}} Add Use Case** to save your changes.
-
-   After you save, confirm that the use case was added as a new entry in alphabetical order.
-
 ::::
