--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -31,9 +31,9 @@ Register models with {{< var vm.product >}} as the first step towards streamlini
 
 If no additional fields are required on registration for your models:
 
-1.  Provide the information outlined in the basic model information fields table below.
+a.  Provide the information outlined in the basic model information fields table below.
 
-2. Click **Register Model** to create a new entry in the model inventory.
+b. Click **Register Model** to create a new entry in the model inventory.
 
 | Field | Description | 
 |---:|---|
@@ -55,11 +55,11 @@ If no additional fields are required on registration for your models:
 
 If additional fields are required on model registration for your organization:
 
-1. First enter the basic model information, then click **Next {{< fa chevron-right >}}**.
+a. First enter the basic model information, then click **Next {{< fa chevron-right >}}**.
 
-2. Fill in your organization's required additional fields.
+b. Fill in your organization's required additional fields.
 
-3. Click **Register Model** to create a new entry in the model inventory.
+c. Click **Register Model** to create a new entry in the model inventory.
 
 :::
 
