--- a/site/guide/configuration/_add-business-units.qmd
+++ b/site/guide/configuration/_add-business-units.qmd
@@ -10,19 +10,13 @@ a. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-#### Add business units
-
 {{< include /guide/configuration/_business-units.qmd >}}
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
 
-1. Under Workspace, select **Organization**.
+a. Enter in your **[business unit name]{.smallcaps}**.
 
-1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
-
-1. Enter in your **[business unit name]{.smallcaps}**.
-
-1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+a. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 
    After you save, confirm that the business unit was added as a new entry in alphabetical order.
 ::::
