--- a/site/guide/configuration/_add-groups.qmd
+++ b/site/guide/configuration/_add-groups.qmd
@@ -16,20 +16,14 @@
 ::::
 
 
-<!-- VISIBLE IN TRAINING SLIDES ONLY -->
-
 :::: {.content-hidden unless-format="revealjs"}
-a. In the left sidebar, click **{{< fa gear >}} Settings**.
+1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
 
-a. Under User Permissions, select **Groups**.
+1. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
 
-a. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
+1. Select users from the list to add them to the group.
 
-a. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
-
-a. Select users from the list to add them to the group.
-
-a. Click **{{< fa check >}} Create Group** to save.
+1. Click **{{< fa check >}} Create Group** to save.
 
     Confirm that the new group is created and appears in the list of available groups in alphabetical order.
 
