--- a/site/guide/configuration/_add-remove-group-members.qmd
+++ b/site/guide/configuration/_add-remove-group-members.qmd
@@ -7,7 +7,7 @@
 
 #### Add members
 
-a. Click **{{< fa chevron-right >}} See Details**.
+a. Click on the group you want to add members to.
 
 a. Click **{{< fa plus >}} Add New Member**.
 
@@ -19,7 +19,7 @@ a. Click **{{< fa plus >}} Add to Group**.
 
 #### Remove members
 
-a. Click **{{< fa chevron-right >}} See Details**.
+a. Click on the group you want to remove members from.
 
 a. Select members to be removed from the group by checking the boxes next to their names.
 
@@ -33,17 +33,13 @@ a. After you confirm, the user will be removed from that group.
 
 
 :::: {.content-hidden unless-format="revealjs"}
-a. In the left sidebar, click **{{< fa gear >}} Settings**.
+1. Click on the group you want to add members to.
 
-a. Under User Permissions, select **Groups**.
+1. Click **{{< fa plus >}} Add New Member**.
 
-a. Click **{{< fa chevron-right >}} See Details**.
+1. Select members by checking the boxes next to their names in the pop-up.
 
-a. Click **{{< fa plus >}} Add New Member**.
-
-a. Select members by checking the boxes next to their names in the pop-up.
-
-a. Click **{{< fa plus >}} Add to Group**.
+1. Click **{{< fa plus >}} Add to Group**.
 
    Confirm that the new member is added to the correct group.
 
