--- a/site/guide/configuration/_add-use-cases.qmd
+++ b/site/guide/configuration/_add-use-cases.qmd
@@ -10,19 +10,13 @@ a. Click **{{< fa plus >}} Add Use Case** to save your changes.
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-#### Add use cases
-
 {{< include /guide/configuration/_use-cases.qmd >}}
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
 
-1. Under Workspace, select **Organization**.
+a. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
 
-1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
-
-1. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
-
-1. Click **{{< fa plus >}} Add Use Case** to save your changes.
+a. Click **{{< fa plus >}} Add Use Case** to save your changes.
 
    After you save, confirm that the use case was added as a new entry in alphabetical order.
 ::::
