--- a/site/guide/configuration/manage-users.qmd
+++ b/site/guide/configuration/manage-users.qmd
@@ -18,6 +18,12 @@ Invite new users and review your current users from within the user directory. U
 
 ## User invitations
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under User Permissions, select **Invite New Users**.
+
+::: {.panel-tabset}
+
 ### Invite new users
 
 {{< include _invite-users.qmd >}}
@@ -26,31 +32,31 @@ Invite new users and review your current users from within the user directory. U
 
 {{< include _monitor-invitations.qmd >}}
 
+:::
+
 ## User roles
 
-### Assign new roles to a user
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
+2. Under User Permissions, select **User Directory**.
 
-2. Under User Permissions, select **User Directory**. 
+::: {.panel-tabset}
 
-3. Next to any individual user, click the {{< fa circle-plus >}} icon to open the Assign Roles menu for that user. 
+#### Assign new roles to a user
 
-4. Click **{{< fa plus >}}** next to the role for each role to be assigned.  
+a. Next to any individual user, click the {{< fa circle-plus >}} icon to open the Assign Roles menu for that user.
 
-5. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
+b. Click **{{< fa plus >}}** next to the role for each role to be assigned.
 
-### Remove roles from a user
+c. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
+#### Remove roles from a user
 
-2. Under User Permissions, select **User Directory**. 
+a. Click the {{< fa xmark >}} next to the role for the user that you want to remove.
 
-3. Click the {{< fa xmark >}} next to the role for the user that you want to remove.
+b.  After you confirm, that role will be removed from the user.
 
-4.  After you confirm, that role will be removed from the user.
-
-
+:::
 
 
 <!-- FOOTNOTES -->
