--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -24,7 +24,7 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 
 1. Under Workspace, select **Organization**.
 
-1. Add, edit and delete business units as required.
+1. Add, rename and delete business units as required.
 
 ::: {.panel-tabset}
 
@@ -32,14 +32,23 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 
 {{< include _add-business-units.qmd >}}
 
-#### Edit business units
+#### Rename business units
 
-a. Hover over the business unit you want to edit.
+a. Hover over the business unit you want to rename.
 
-b. When the **{{< fa ellipsis-vertical >}}** appears, click on it to rename or delete the unit:
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa pencil >}} Edit Details** to rename the business unit.
 
-    - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
-    - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
+c. Click **Save** to apply your changes.
+
+::: {.callout-important}
+In order to delete a business unit, there must be no models attached to that unit.
+:::
+
+#### Delete business units
+
+a. Hover over the business unit you want to delete.
+
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
 
 ::: {.callout-important}
 In order to delete a business unit, there must be no models attached to that unit.
@@ -69,7 +78,7 @@ In order to delete a business unit, there must be no models attached to that uni
 In order to delete a use case, there must be no models associated with it.
 :::
 
-a. Hover over the use case you want to edit.
+a. Hover over the use case you want to delete.
 
 b. When the **{{< fa ellipsis-vertical >}}** appears, click on it.
 
