--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -135,9 +135,17 @@ Business units & use cases
 
 Get your organization ready for use by first defining business units and use cases:
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Organization**.
+
 ::: {.panel-tabset}
 
+#### Add business units
+
 {{< include /guide/configuration/_add-business-units.qmd >}}
+
+#### Add use cases
 
 {{< include /guide/configuration/_add-use-cases.qmd >}}
 
@@ -194,13 +202,17 @@ Risk areas & validation guidelines
 
 Next, define your risk areas and validation guidelines:
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Risk Areas & Validation Guidelines**.
+
 ::: {.panel-tabset}
 
-### 1. Add risk areas
+### a. Add risk areas
 
 {{< include /guide/model-validation/_add-risk-areas.qmd >}}
 
-### 2. Add validation guidelines
+### b. Add validation guidelines
 
 {{< include /guide/model-validation/_add-validation-guidelines.qmd >}}
 
@@ -212,18 +224,30 @@ Next, define your risk areas and validation guidelines:
 
 ## {background-iframe="https://app.prod.validmind.ai/settings/risk-areas" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .three-quarters .auto-collapse-10}
+:::: {.slideover--b .half .auto-collapse-10}
 ::: {.tc}
-**Add a risk area & validation guideline**
+**Add a risk area**
 :::
 
 1. Click **{{< fa plus >}} Add Risk Area**.
 2. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
 3. Click **Add Risk Area** to create your risk area.
-4. Hover over the risk area you added above until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
-5. Select **{{< fa plus >}} Add Guideline**.
-6. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
-7. Click **Add Guideline** to insert your guideline to your risk area.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/risk-areas" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add a validation guideline**
+:::
+
+1. Hover over the risk area you added previously until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+2. Select **{{< fa plus >}} Add Guideline**.
+3. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
+4. Click **Add Guideline** to insert your guideline to your risk area.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -248,13 +272,17 @@ Manage user groups
 
 {{< include /guide/configuration/_user-groups.qmd >}}
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under User Permissions, select **Groups**.
+
 ::: {.panel-tabset}
 
-#### 1. Add groups
+#### a. Add groups
 
 {{< include /guide/configuration/_add-groups.qmd >}}
 
-#### 2. Add users to groups
+#### b. Add users to groups
 
 {{< include /guide/configuration/_add-remove-group-members.qmd >}}
 
@@ -315,18 +343,30 @@ Manage user roles
 
 ## {background-iframe="https://app.prod.validmind.ai/settings/roles" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .half .auto-collapse-10}
 ::: {.tc}
-**Create role & assign permissions**
+**Create new role**
 :::
 
 1. Click **{{< fa plus >}} Add New Role**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
 3. Click **{{< fa plus >}} Add Role**.
-4. Select the role you created above.
-5. On the **Permissions** tab, select **Edit Permissions**.
-6. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission.
-7. Click **Save Permissions** to apply your changes.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/roles" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Assign role permissions**
+:::
+
+1. Select the role you created previously.
+2. On the **Permissions** tab, select **Edit Permissions**.
+3. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission.
+4. Click **Save Permissions** to apply your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -387,6 +427,10 @@ Invite users via email
 ::: {.column width="70%" .bl .pl4 .f3}
 
 Once you've set up the basics, grant users access to the {{< var validmind.platform >}} by sending them email invitations to join your organization:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under User Permissions, select **Invite New Users**.
 
 ::: {.panel-tabset}
 
