--- a/site/guide/configuration/manage-users.qmd
+++ b/site/guide/configuration/manage-users.qmd
@@ -16,7 +16,7 @@ Invite new users and review your current users from within the user directory. U
 
 :::
 
-## User invitations
+## Manage user invitations
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -34,29 +34,9 @@ Invite new users and review your current users from within the user directory. U
 
 :::
 
-## User roles
+## Manage user roles
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under User Permissions, select **User Directory**.
-
-::: {.panel-tabset}
-
-#### Assign new roles to a user
-
-a. Next to any individual user, click the {{< fa circle-plus >}} icon to open the Assign Roles menu for that user.
-
-b. Click **{{< fa plus >}}** next to the role for each role to be assigned.
-
-c. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
-
-#### Remove roles from a user
-
-a. Click the {{< fa xmark >}} next to the role for the user that you want to remove.
-
-b.  After you confirm, that role will be removed from the user.
-
-:::
+{{< include _manage-user-roles.qmd >}}
 
 
 <!-- FOOTNOTES -->
