--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -402,8 +402,8 @@ In addition to assigning permissions via individual user roles, you can add role
 **Modify global permissions**
 :::
 
-1. **Add the role you created earlier** to a specific permission by clicking **{{< fa plus >}}**, then selecting the permission from the drop-down menu.
-2. **Remove the role you created earlier** from a specific permission by clicking **{{< fa x >}}** next to the role.
+1. **Add the role you created earlier** to two permissions by clicking **{{< fa plus >}}**, then selecting the role from the drop-down menu.
+2. **Remove the role you created earlier** from one of the permissions you added above by clicking **{{< fa x >}}** next to the role.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -472,10 +472,10 @@ When you are done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Manage role users
+Manage roles on users
 
 ::: {.tc}
-[Learn more ...](/guide/configuration/manage-roles.qmd){.button target="_blank"}
+[Learn more ...](/guide/configuration/manage-users.qmd#manage-user-roles){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
@@ -485,27 +485,30 @@ Manage role users
 
 After granting access to your users, you can adjust their roles as needed:
 
+<!-- ### Manage users on roles
+
 {{< include /guide/configuration/_manage-role-users.qmd >}}
 
 #### Add role to user
 
-{{< include /guide/configuration/_add-role-to-user.qmd >}}
+{{< include /guide/configuration/_add-role-to-user.qmd >}} -->
+
+{{< include /guide/configuration/_manage-user-roles.qmd >}}
 
 :::
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings/roles" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/user-directory" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
-**Modify a role's users**
+**Add role to user**
 :::
 
-1. **Click on the role you created earlier** and select the **Users** tab.
-2. **For the user you invited earlier,** click **{{< fa plus >}}** to open the Assign Roles menu.
-3. Click **{{< fa plus >}}** next to the role for each role to be assigned.
-4. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
+1. **For the user you invited earlier,** click the {{< fa circle-plus >}} icon to open the Assign Roles menu for that user.
+2. Click **{{< fa plus >}}** next to a role to assign that role to the user.
+3. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
