--- a/site/guide/templates/_customize-documentation-templates.qmd
+++ b/site/guide/templates/_customize-documentation-templates.qmd
@@ -18,7 +18,7 @@
 
    a. **Add content to sections:**
       - For validation report templates, you're able to add additional content. 
-      - Click **{{< fa plus >}}** to add content to that section of the template, such as a **Summary Block** or a **Guideline Block**.^[[Add guidelines to templatesmanage](/guide/model-validation/manage-validation-guidelines.qmd#add-guidelines-to-templates)]
+      - Click **{{< fa plus >}}** to add content to that section of the template, such as a **Summary Block** or a **Guideline Block**.^[[Add guidelines to templates](/guide/model-validation/manage-validation-guidelines.qmd#add-guidelines-to-templates)]
 
    a. **Rename sections:** 
       - Hover over a section until the **{{< fa pencil >}}** appears, then click on it to change the name. 
