--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -150,7 +150,11 @@ Manage model inventory fields
 
 ### Inventory field types
 
+::: {.f4}
+
 {{< include /guide/model-inventory/_inventory-field-types.qmd >}}
+
+:::
 
 :::
 
@@ -238,10 +242,22 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 
 1. Click **{{< fa plus >}} Add New Stakeholder Type**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
-3. Click on the stakeholder type you added above.
-4. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
-5. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission. 
-6. Click **Save Permissions** to apply your changes.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/stakeholders" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Modify stakeholder field permissions**
+:::
+
+1. Click on the stakeholder type you added previously.
+2. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
+3. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission.
+4. Click **Save Permissions** to apply your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -272,7 +288,11 @@ Work with templates
 
 ## View documentation templates
 
+::: {.f3}
+
 {{< include /guide/templates/_view-documentation-templates.qmd >}}
+
+:::
 
 ## Duplicate documentation templates
 
@@ -316,7 +336,7 @@ Customize documentation templates
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
 :::
 
-::: {.column width="70%" .bl .pl4 .f3}
+::: {.column width="70%" .bl .pl4 .f4}
 
 {{< include /guide/templates/_customize-documentation-templates.qmd >}}
 
@@ -370,6 +390,8 @@ Private blocks can be modified by any user role and are unique to that user.
 
 {{< include /guide/templates/_text-blocks.qmd >}}
 
+::: {.f4}
+
 ::: {.panel-tabset}
 
 ### Add text blocks
@@ -379,6 +401,8 @@ Private blocks can be modified by any user role and are unique to that user.
 ### Duplicate text blocks
 
 {{< include /guide/templates/_duplicate-text-blocks.qmd >}}
+
+:::
 
 :::
 
