--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -192,7 +192,7 @@ Manage model stages
 
 ## {background-iframe="https://app.prod.validmind.ai/settings/statuses" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .three-quarters .auto-collapse-10}
+:::: {.slideover--b .half .auto-collapse-10}
 ::: {.tc}
 **Add a model stage**
 :::
@@ -258,7 +258,7 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 ## {background-iframe="https://app.prod.validmind.ai/settings/workflows" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a model workflow**
 :::
@@ -281,12 +281,12 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 :::
 
 1. Click on the workflow you'd added earlier, then:
-  - To add a step, drag and drop a new step onto the canvas. For example: {{< fa arrow-pointer >}} User Action v2
-  - Double-click the new step to open up the configuration modal.
+    - To add a step, drag and drop a new step onto the canvas. For example: {{< fa arrow-pointer >}} User Action v2
+    - Double-click the new step to open up the configuration modal.
 2. After you're finished with step configuration, click **Update Step** to apply your changes.
 3. After you've configured a step, link your example workflow together:
-  - Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
-  - Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the step you added previously.
+    - Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
+    - Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the step you added previously.
 4. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
 5. Link your previous step to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of that step, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
 6. Click **Save Workflow** to apply your changes.
@@ -459,7 +459,7 @@ Set up attestations
 
 :::
 
-::: {.column width="70%" .bl .pl4 .f4}
+::: {.column width="70%" .bl .pl4 .f3}
 
 ::: {.panel-tabset}
 
@@ -469,7 +469,11 @@ Set up attestations
 
 #### 2. Configure attestations
 
+::: {.f4}
+
 {{< include /guide/attestation/_configure-attestations.qmd >}}
+
+:::
 
 :::
 
@@ -487,9 +491,9 @@ Set up attestations
 1. Click **{{< fa plus >}} Add Attestation**.
 2. Enter a **[name]{.smallcaps}** and **[description]{.smallcaps}** for the attestation.
 3. Click on the name of the attestation you added to configure it:
-  - Click **{{< fa plus >}} Add Attestation Period** and add a period.
-  - Under Relevant Attestation Fields, drag **Relevant Attestation Fields** to display in model snapshots.
-  - Under Questionnaire Template, click the template area to edit.
+    - Click **{{< fa plus >}} Add Attestation Period** and add a period.
+    - Under Relevant Attestation Fields, drag **Relevant Attestation Fields** to display in model snapshots.
+    - Under Questionnaire Template, click the template area to edit.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
