--- a/site/training/program/training-faq.qmd
+++ b/site/training/program/training-faq.qmd
@@ -16,7 +16,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/configure-inventory-fields){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/manage-model-inventory-fields.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/section-3){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/manage-model-inventory-fields.qmd){.button-small}
 :::
 
 ::::
@@ -28,7 +28,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/configure-inventory-fields){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/manage-model-inventory-fields.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/section-3){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/manage-model-inventory-fields.qmd){.button-small}
 :::
 
 ::::
@@ -42,7 +42,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-13){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-users.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-15){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-users.qmd){.button-small}
 :::
 
 ::::
@@ -54,7 +54,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-9){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-10){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
 :::
 
 ::::
@@ -66,7 +66,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-15){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-17){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-users.qmd#manage-user-roles){.button-small}
 :::
 
 ::::
@@ -78,7 +78,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-7){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-groups.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-8){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-groups.qmd){.button-small}
 :::
 
 ::::
@@ -130,7 +130,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/customize-reusable-templates){.button-small} [{{< fa book-open >}} docs](/guide/templates/customize-documentation-templates.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/section-11){.button-small} [{{< fa book-open >}} docs](/guide/templates/customize-documentation-templates.qmd){.button-small}
 :::
 
 ::::
@@ -142,7 +142,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/customize-reusable-templates){.button-small} [{{< fa book-open >}} docs](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb#include-custom-test-results){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/configure-documentation-templates){.button-small} [{{< fa book-open >}} docs](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb#documentation-template-configuration){.button-small}
 :::
 
 ::::
